--- a/style.css
+++ b/style.css
@@ -29,27 +29,59 @@ body {
   text-transform: uppercase;
 }
 
+ul {
+  list-style: none;
+}
+
+
 
 /*header*/
 header {
   display: flex;
   justify-content: space-between;
-  margin: 8px 25px;
+  margin: 0 30px;
 }
 
 .company-logo {
-  height: 40%;
+  height: 90%;
+  margin-top: 10px;
 }
 
-.top-nav {
+.top-nav-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.top-nav-ul, .primary-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-nav-ul {
+  width: 110px;
+}
+
+.top-nav-btn {
+  text-align: center;
+  fill: #237377;
+}
+
+.top-nav-btn p {
+  margin: 0;
+  font-size: 12px;
   color: #969696;
 }
 
-/*nav {
-  text-decoration: none;
-}*/
+.primary-nav {
+  margin: 5px 0 10px 0;
+}
 
-
+.primary-nav li {
+  margin-left: 25px;
+  font-size: 16px;
+  font-weight: bold;
+}
 
 
 
