--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*fonts*/
 body, .search, .contact-me {
   font-family: 'Lato', sans-serif;
-  /*letter-spacing: .02em;*/
+  letter-spacing: .04em;
 }
 
 .status, .profile-nav, .profile-details p, .search-input {
@@ -39,6 +39,10 @@ header {
 .company-logo {
   height: 88%;
   margin-top: 8px;
+}
+
+.small-logo {
+  display: none;
 }
 
 .top-nav-container {
@@ -102,6 +106,10 @@ header {
   margin: 0 25px;
 }
 
+.search p {
+  margin: 0;
+}
+
 .search-input, .search, .contact-me {
   outline: none;
   border: none;
@@ -112,6 +120,10 @@ header {
   border-radius: 2.5px;
   color: #fff;
   letter-spacing: .05em;
+}
+
+.search-icon {
+  display: none;
 }
 
 .secondary-nav ul {
@@ -157,7 +169,7 @@ header {
 }
 
 .contact-me {
-  height: 37px;
+  height: 40px;
   width: 230px;
   margin-top: 10px;
 }
@@ -176,8 +188,10 @@ header {
 }
 
 .contact-details li {
-  margin-bottom: 18px;
+  margin-bottom: 22px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
 .phone-icon {
@@ -185,24 +199,30 @@ header {
 }
 
 .phone-no {
-  margin-left: 15px;
+  margin-left: 20px;
   color: #565656;
 }
 
 .contact-details a {
-  margin-left: 15px;
-  color: #2399a6;
+  margin-left: 20px;
+  color: #237377;
 }
 
+.hamburger-menu {
+  display: none;
+}
 
 /*profile*/
 .profile-details {
   padding-bottom: 40px;
 }
 
-.profile-nav ul{
+.profile-nav {
+  margin-top: 40px;
+}
+
+.profile-nav ul {
   display: flex;
-  margin-top: 45px;
   padding: 0;
   padding-bottom: 15px;
   width: 100%;
@@ -221,6 +241,10 @@ header {
 .profile-nav li:hover {
   color: #237377;
   border-bottom: 2px solid #237377;
+}
+
+.select-menu {
+  display: none;
 }
 
 /*content*/
@@ -335,6 +359,10 @@ footer li:hover {
     height: 75%;
   }
 
+  .hamburger-menu {
+    display: block;
+  }
+
   .primary-nav {
     display: none;
   }
@@ -343,6 +371,7 @@ footer li:hover {
     height: 50px;
     margin: 0;
     align-items: center;
+    width: 170px;
   }
 
   .secondary-nav ul {
@@ -363,5 +392,124 @@ footer li:hover {
 
   .profile-details {
     padding-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .full-logo {
+    display: none;
+  }
+
+  .small-logo {
+    display: block;
+  }
+
+  .btn-text {
+    display: none;
+  }
+
+  .search {
+    margin: 0;
+    width: 75px;
+  }
+
+  .search-icon {
+    display: block;
+    margin: auto;
+  }
+
+  .secondary-nav ul {
+    display: none;
+  }
+
+  .banner {
+    flex-direction: column;
+    height: 100%
+  }
+
+  .profile-nav ul {
+    display: none
+  }
+
+  .contact-details {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .contact-details ul {
+    padding-left: 0;
+  }
+
+  .contact-details {
+    margin-left: 0;
+  }
+
+  .contact-me, .social-media {
+    width: 290px;
+  }
+
+  .select-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 38px;
+    border: 1px solid #595959;
+    padding: 0 12px;
+  }
+
+  .select-menu p {
+    color: #2399a6;
+    font-weight: bold
+  }
+
+  .content-container {
+    flex-direction: column;
+  }
+
+  .description {
+    width: 100%;
+  }
+
+  .basic-info, .extra-info {
+    width: 100%;
+  }
+
+  .basic-info {
+    margin-top: 10px;
+  }
+
+  .name {
+    margin: 0;
+  }
+
+  .status {
+    margin: 5px;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-info {
+    text-align: center;
+    width: 100%;
+  }
+
+  footer .social-media {
+    margin: auto;
+    margin-top: 26px;
+    width: 290px;
+  }
+
+  .footer-extra {
+    align-items: center;
+    margin-top: 8px;
+  }
+
+  .footer-extra ul {
+    padding-left: 0
   }
 }
